{
  "version": 4,
  "terraform_version": "0.12.6",
  "serial": 210,
  "lineage": "e831cd95-1f7f-e8a7-a4e6-d1296705be2d",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-05cb1f530cbbbd8e5",
            "public_dns": "ec2-52-63-107-98.ap-southeast-2.compute.amazonaws.com",
            "public_ip": "52.63.107.98",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "gw",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-0f683fb78009c545c",
            "owner_id": "771125400872",
            "vpc_id": "vpc-040cd8cce22b96c4a"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-05cb1f530cbbbd8e5",
            "id": "nat-065d97d55005697fa",
            "network_interface_id": "eni-07de0a5aab89ca2fe",
            "private_ip": "10.0.3.241",
            "public_ip": "52.63.107.98",
            "subnet_id": "subnet-0850428a4188708e8"
          },
          "depends_on": [
            "aws_eip.nat",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0facd009a093abf6d",
            "owner_id": "771125400872",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "nat-065d97d55005697fa",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-040cd8cce22b96c4a"
          },
          "depends_on": [
            "aws_nat_gateway.nat",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0587b7e6ee254bd26",
            "owner_id": "771125400872",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0f683fb78009c545c",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": null,
            "vpc_id": "vpc-040cd8cce22b96c4a"
          },
          "depends_on": [
            "aws_internet_gateway.gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_aa",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-05a46f9235b44ba10",
            "route_table_id": "rtb-0facd009a093abf6d",
            "subnet_id": "subnet-0b440c17103f4290e"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0208a306b8612abdc",
            "route_table_id": "rtb-0facd009a093abf6d",
            "subnet_id": "subnet-03da1dbdde83a9621"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bee037c85453e751",
            "route_table_id": "rtb-0facd009a093abf6d",
            "subnet_id": "subnet-0991eccab8b0b7813"
          },
          "depends_on": [
            "aws_route_table.private",
            "aws_subnet.private"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a97e8d9bfd3a8238",
            "route_table_id": "rtb-0587b7e6ee254bd26",
            "subnet_id": "subnet-0850428a4188708e8"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00969a7d409f3a8ac",
            "route_table_id": "rtb-0587b7e6ee254bd26",
            "subnet_id": "subnet-0ffb67d825b363c3c"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d14b628f17b01e5",
            "route_table_id": "rtb-0587b7e6ee254bd26",
            "subnet_id": "subnet-086857a840d80ca5f"
          },
          "depends_on": [
            "aws_route_table.public",
            "aws_subnet.public"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:771125400872:security-group/sg-06f89646077bdc919",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-06f89646077bdc919",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "lb",
            "name_prefix": null,
            "owner_id": "771125400872",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-040cd8cce22b96c4a"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:771125400872:security-group/sg-083eb421a7b49655d",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-083eb421a7b49655d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "private",
            "name_prefix": null,
            "owner_id": "771125400872",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-040cd8cce22b96c4a"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:771125400872:security-group/sg-03f24103563fe1c94",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03f24103563fe1c94",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "public",
            "name_prefix": null,
            "owner_id": "771125400872",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-040cd8cce22b96c4a"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:771125400872:subnet/subnet-0b440c17103f4290e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.0.0/24",
            "id": "subnet-0b440c17103f4290e",
            "map_public_ip_on_launch": false,
            "owner_id": "771125400872",
            "tags": {
              "Name": "main.private"
            },
            "vpc_id": "vpc-040cd8cce22b96c4a"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:771125400872:subnet/subnet-03da1dbdde83a9621",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-03da1dbdde83a9621",
            "map_public_ip_on_launch": false,
            "owner_id": "771125400872",
            "tags": {
              "Name": "main.private"
            },
            "vpc_id": "vpc-040cd8cce22b96c4a"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:771125400872:subnet/subnet-0991eccab8b0b7813",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0991eccab8b0b7813",
            "map_public_ip_on_launch": false,
            "owner_id": "771125400872",
            "tags": {
              "Name": "main.private"
            },
            "vpc_id": "vpc-040cd8cce22b96c4a"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:771125400872:subnet/subnet-0850428a4188708e8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2a",
            "availability_zone_id": "apse2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0850428a4188708e8",
            "map_public_ip_on_launch": true,
            "owner_id": "771125400872",
            "tags": {
              "Name": "main.public"
            },
            "vpc_id": "vpc-040cd8cce22b96c4a"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:771125400872:subnet/subnet-0ffb67d825b363c3c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2b",
            "availability_zone_id": "apse2-az3",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0ffb67d825b363c3c",
            "map_public_ip_on_launch": true,
            "owner_id": "771125400872",
            "tags": {
              "Name": "main.public"
            },
            "vpc_id": "vpc-040cd8cce22b96c4a"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:771125400872:subnet/subnet-086857a840d80ca5f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-2c",
            "availability_zone_id": "apse2-az2",
            "cidr_block": "10.0.5.0/24",
            "id": "subnet-086857a840d80ca5f",
            "map_public_ip_on_launch": true,
            "owner_id": "771125400872",
            "tags": {
              "Name": "main.public"
            },
            "vpc_id": "vpc-040cd8cce22b96c4a"
          },
          "depends_on": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-2:771125400872:vpc/vpc-040cd8cce22b96c4a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0dc2691e93165c044",
            "default_route_table_id": "rtb-0c0015e5b0007afc1",
            "default_security_group_id": "sg-0eb2006d792a465b3",
            "dhcp_options_id": "dopt-6d533c08",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-040cd8cce22b96c4a",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c0015e5b0007afc1",
            "owner_id": "771125400872",
            "tags": {
              "Name": "main"
            }
          }
        }
      ]
    }
  ]
}